--- a/recipe.html
+++ b/recipe.html
@@ -12,20 +12,23 @@
 <body>
 <div class="wrapper">
     <header class="header">
-        <div class="logo">
+        <a href="index.html" class="logo">
             <picture>
                 <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
             <h1 class="title">Forkfolio</h1>
-        </div>
+        </a>
     </header>
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
                 <i class="fa fa-bars"></i>
             </a>
-            <a href="add_recipe.html">Lägg till recept</a>
-            <a href="index.html" class>Hem</a>
+            <a href="categories.html?category=lunch"><span>Lunch </span></a>
+            <a href="categories.html?category=middag"><span>Middag </span></a>
+            <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
+            <a href="my_recipies.html"><span>Mina recept</span></a>
+            <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
     </nav>
     <div class="articleContainer">
@@ -37,11 +40,23 @@
                 </picture>
                 <picture id="lasagne">
                     <source media="(min-width: 769px)" srcset="images/lasagne/lasagne_960.jpg">
-                    <img  src="images/lasagne/lasagne_480.jpg" alt="Lasagne on a plate">
+                    <img  src="images/lasagne/lasagne_480.jpg" alt="Lasagne">
                 </picture>
                 <picture id="sallad">
                     <source media="(min-width: 769px)" srcset="images/sallad/sallad_960.jpg">
                     <img src="images/sallad/sallad_480.jpg" alt="Sallad">
+                </picture>
+                <picture id="choklad">
+                    <source media="(min-width: 769px)" srcset="images/chocolate_cake/chocolate_cake_960.jpg">
+                    <img src="images/chocolate_cake/chocolate_cake_480.jpg" alt="Chokladtårta">
+                </picture>
+                <picture id="plock">
+                    <source media="(min-width: 769px)" srcset="images/plock/plock_960.jpg">
+                    <img src="images/plock/plock_480.jpg" alt="Plocktallrik">
+                </picture>
+                <picture id="vegpasta">
+                    <source media="(min-width: 769px)" srcset="images/veg_pasta/veg_pasta_960.jpg">
+                    <img src="images/veg_pasta/veg_pasta_480.jpg" alt="Vegetarisk pasta">
                 </picture>
                 <div class="ingredients">
                     <h3>Ingredienser</h3>
@@ -76,20 +91,31 @@
     </div>
 
     <footer class="footer">
-        <div class="footerLogo">
+        <a href="index.html" class="footerLogo">
             <picture>
                 <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
                 <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
             </picture>
             <p>ForkFolio-för dig som älskar mat!</p>
+        </a>
+        <div class="footerLinks">
+            <a href="add_recipe.html">Lägg till recept</a>
+            <a href="my_recipies.html"><span>Mina recept</span></a>
         </div>
         <div class="footerLinks">
-            <a href="index.html" class>Hem</a>
-            <a href="add_recipe.html">Lägg till recept</a>
+            <a href="categories.html?category=lunch"><span>Lunch </span></a>
+            <a href="categories.html?category=middag"><span>Middag </span></a>
+            <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
         </div>
+
         <div class="footerLinks">
-            <a href="index.html" class>Hem</a>
-            <a href="add_recipe.html">Lägg till recept</a>
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                         src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                         alt="Valid CSS!" />
+                </a>
+            </p>
         </div>
     </footer>
 </div>
@@ -108,8 +134,14 @@
         const params = new URLSearchParams(window.location.search);
         const recipe = params.get('recipe');
         if (recipe) {
-            document.getElementById(recipe).classList.add('active');
-            document.getElementById('recipe-title').textContent = recipe.charAt(0).toUpperCase() + recipe.slice(1);
+            const recipeElement = document.getElementById(recipe);
+            if (recipeElement) {
+                recipeElement.classList.add('active');
+                const imgElement = recipeElement.querySelector('img');
+                if (imgElement && imgElement.alt) {
+                    document.getElementById('recipe-title').textContent = imgElement.alt;
+                }
+            }
         }
     });
 </script>
