--- a/add_recipe.html
+++ b/add_recipe.html
@@ -22,6 +22,7 @@
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
+                <span class="visually-hidden">Hamburger menu</span>
                 <i class="fa fa-bars"></i>
             </a>
             <a href="categories.html?category=lunch"><span>Lunch </span></a>
