--- a/recipe.html
+++ b/recipe.html
@@ -22,6 +22,7 @@
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
+                <span class="visually-hidden">Hamburger menu</span>
                 <i class="fa fa-bars"></i>
             </a>
             <a href="categories.html?category=lunch"><span>Lunch </span></a>
@@ -59,7 +60,7 @@
                     <img src="images/veg_pasta/veg_pasta_480.jpg" alt="Vegetarisk pasta">
                 </picture>
                 <div class="ingredients">
-                    <h3>Ingredienser</h3>
+                    <h2>Ingredienser</h2>
                     <ul>
                         <li><span class="amount">1</span> stor lök</li>
                         <li><span class="amount">3</span> potatisar</li>
