--- a/categories.html
+++ b/categories.html
@@ -47,6 +47,9 @@
                     i ditt kulinariska äventyr. Så öppna ditt sinne, förbered dina smaklökar och låt oss ta det
                     första steget tillsammans på en resa som lovar att förgylla dina måltider och berika dina matlagningskunskaper.
                 </div>
+                <div class="infoBox">
+                    <p>Välj recept med <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i> för ett grönare val </p>
+                </div>
                 <h2>Här kommer några förslag på recept:</h2>
                 <div class="category">
                     <div class="middag">
