--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             </div>
             <!-- Section: My recipies section -->
             <section>
+                <div class="infoBox">
+                    <p>Välj recept med <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i> för ett grönare val </p>
+                </div>
                 <h2 class="sectionTitle">Mina recept</h2>
                 <div class="sectionContainer">
                     <a href="recipe.html?recipe=sallad" class="recipeCard">
@@ -66,7 +69,9 @@
                             <div class="cardFooter">
                                 <p>En grön och fräsch sallad </p>
                                 <div class="iconContainer">
-                                    <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                    <div class="tooltip"> <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                        <span class="tooltipText">Ett grönare val</span>
+                                    </div>
                                     <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
@@ -172,7 +177,9 @@
                             <div class="cardFooter">
                                 <p>Vegetarisk pasta med tomater</p>
                                 <div class="iconContainer">
-                                    <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                    <div class="tooltip"> <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                        <span class="tooltipText">Ett grönare val</span>
+                                    </div>
                                     <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
@@ -189,7 +196,9 @@
                             <div class="cardFooter">
                                 <p>Somrig plocktallrik</p>
                                 <div class="iconContainer">
-                                    <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                    <div class="tooltip"> <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                        <span class="tooltipText">Ett grönare val</span>
+                                    </div>
                                     <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
