--- a/my_recipies.html
+++ b/my_recipies.html
@@ -62,7 +62,9 @@
                         <div class="cardFooter">
                             <p>En fräsch sallad </p>
                             <div class="iconContainer">
-                                <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                <div class="tooltip"> <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                    <span class="tooltipText">Ett grönare val</span>
+                                </div>
                                 <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                             </div>
                         </div>
