Issue #25: Article authors card

--- a/summer-cakes.html
+++ b/summer-cakes.html
@@ -80,6 +80,24 @@
                 </ul>
                 <p>Oavsett vilken sommartårta du väljer, se till att njuta av den i gott sällskap och med ett glas iskallt bubbel. Glad sommar!</p>
             </div>
+            <div class="articleContainer">
+                <div class="authorCard">
+                    <article >
+                        <picture>
+                            <source media="(min-width: 1201px)" srcset="images/author1_480.jpg">
+                            <img src="images/author1_270.jpg" alt="Profilbild på en kvinna">
+                        </picture>
+                        <div class="articleContent">
+                            <h3>Artikel av Linn Jansson</h3>
+                            <p>Efterrätter är ett favoritämne</p>
+                            <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+                            <i class="fa fa-facebook fa-lg" aria-hidden="true"></i>
+                            <i class="fa fa-pinterest fa-lg" aria-hidden="true"></i>
+                            <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+                        </div>
+                    </article>
+                </div>
+            </div>
 
         </main>
     </div>
