--- a/vegetables.html
+++ b/vegetables.html
@@ -75,7 +75,24 @@
                 <p>Att äta säsongsmat är inte bara gott utan också bra för miljön. Så njut av dessa hälsosamma grönsaker
                     och frukter när de är i säsong!</p>
             </div>
-
+            <div class="articleContainer">
+                <div class="authorCard">
+                    <article >
+                        <picture>
+                            <source media="(min-width: 1201px)" srcset="images/author2_480.jpg">
+                            <img src="images/author2_270.jpg" alt="Profilbild på en kvinna">
+                        </picture>
+                        <div class="articleContent">
+                            <h3>Artikel av Anna Johnsson</h3>
+                            <p>Mat, bröd och mycket grönsaker!</p>
+                            <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+                            <i class="fa fa-facebook fa-lg" aria-hidden="true"></i>
+                            <i class="fa fa-pinterest fa-lg" aria-hidden="true"></i>
+                            <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </main>
     </div>
     <!-- Section Footer  -->
