--- a/categories.html
+++ b/categories.html
@@ -174,6 +174,10 @@
             <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
         </div>
         <div class="footerLinks">
+            <a href="authors.html"><span>Möt våra författare </span></a>
+            <a href="photographers.html"><span>Källor</span></a>
+        </div>
+        <div class="footerLinks">
             <p>
                 <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
                     <img style="border:0;width:88px;height:31px"
